--- a/package.json
+++ b/package.json
@@ -6,44 +6,39 @@
   "private": true,
   "main": "app/server.js",
   "scripts": {
-    "bower":                       "bower install",
-
-    "postinstall":                 "grunt release",
-    "start":                       "node app/server.js",
-
-    "pretest":                     "npm install",
-    "test":                        "mocha -R spec",
-
-    "test-ui":                     "karma start karma.conf.js",
-    "test-ui-single-run":          "karma start karma.conf.js --single-run",
-    "unittest-frontend-teamcity":  "karma start karma-teamcity.conf.js --single-run",
-    "unittest-backend-teamcity":   "mocha -R mocha-teamcity-reporter",
-    "coverage-teamcity":           "istanbul cover node_modules/mocha/bin/_mocha",
-
-    "preupdate-webdriver":         "npm install",
-    "update-webdriver":            "webdriver-manager update",
-    "pree2e":                      "npm run update-webdriver",
-    "e2e":                         "protractor e2e-test/protractor.conf.js",
-    "eslint":                      "eslint app/**/*.js test/**/*.js public/app/**/*.js",
-    "eslint-report":               "eslint app/**/*.js test/**/*.js public/app/**/*.js -f node_modules/eslint-html-reporter/reporter.js -o qa/eslint-report.html"
-
+    "bower": "bower install",
+    "postinstall": "grunt release",
+    "start": "node app/server.js",
+    "pretest": "npm install",
+    "test": "mocha -R spec",
+    "test-ui": "karma start karma.conf.js",
+    "test-ui-single-run": "karma start karma.conf.js --single-run",
+    "unittest-frontend-teamcity": "karma start karma-teamcity.conf.js --single-run",
+    "unittest-backend-teamcity": "mocha -R mocha-teamcity-reporter",
+    "coverage-teamcity": "istanbul cover node_modules/mocha/bin/_mocha",
+    "preupdate-webdriver": "npm install",
+    "update-webdriver": "webdriver-manager update",
+    "pree2e": "npm run update-webdriver",
+    "e2e": "protractor e2e-test/protractor.conf.js",
+    "eslint": "eslint app/**/*.js test/**/*.js public/app/**/*.js",
+    "eslint-report": "eslint app/**/*.js test/**/*.js public/app/**/*.js -f node_modules/eslint-html-reporter/reporter.js -o qa/eslint-report.html"
   },
   "dependencies": {
     "async": "^1.5.2",
     "basic-auth": "^1.0.3",
-    "baucis": "1.6.5", 
+    "baucis": "1.6.5",
     "baucis-swagger": "1.1.2",
     "baucis-swagger2": "0.3.15",
-    "bcrypt-nodejs": "0.0.3",    
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.2",
     "bower": "^1.7.7",
-    "compression": "^1.6.0", 
-    "connect-mongo": "^1.1.0",       
+    "compression": "^1.6.0",
+    "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.4.1",
     "event-stream": "^3.3.2",
     "express": "^4.13.3",
     "express-session": "^1.13.0",
-    "gridfs-stream": "^1.1.1",    
+    "gridfs-stream": "^1.1.1",
     "grunt": "^0.4.5",
     "grunt-cli": "^1.1.0",
     "grunt-contrib-clean": "^1.0.0",
@@ -58,28 +53,29 @@
     "mongoose-geojson": "0.0.4",
     "morgan": "^1.7.0",
     "multer": "^1.1.0",
+    "newrelic": "^1.26.2",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0",
+    "passport-github2": "^0.1.10",
+    "passport-google-oauth": "^1.0.0",
+    "passport-http": "^0.3.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
+    "passport-localapikey-update": "^0.5.0",
+    "passport-twitter": "^1.0.4",
+    "passport-windowslive": "^1.0.2",
     "pkgcloud": "^1.3.0",
     "q": "^1.4.1",
     "string": "^3.3.1",
     "tmp": "^0.0.28",
-    "xlsx": "^0.8.0",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "passport-http": "^0.3.0",
-    "passport-localapikey-update": "^0.5.0",
-    "passport-google-oauth": "^1.0.0",
-    "passport-facebook": "^2.1.0",
-    "passport-github2": "^0.1.10",
-    "passport-http-bearer": "^1.0.1",
-    "passport-twitter": "^1.0.4",
-    "passport-windowslive": "^1.0.2"
+    "xlsx": "^0.8.0"
   },
   "devDependencies": {
     "deco": "~0.12.3",
     "expect.js": "~0.3.1",
     "eslint-html-reporter": "^0.4.14",
     "istanbul": "^0.4.2",
-    "jasmine": "^2.4.1",    
+    "jasmine": "^2.4.1",
     "mocha-teamcity-reporter": "^1.0.0",
     "shelljs": "^0.6.0",
     "request": "~2.69.0"
