--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bower": "^1.7.7",
     "compression": "^1.6.0",
     "connect-mongo": "^1.1.0",
+    "consul": "^0.25.0",
     "cookie-parser": "^1.4.1",
     "event-stream": "^3.3.2",
     "express": "^4.13.3",
@@ -65,6 +66,7 @@
     "passport-twitter": "^1.0.4",
     "passport-windowslive": "^1.0.2",
     "pkgcloud": "^1.3.0",
+    "prom-client": "^3.4.1",
     "q": "^1.4.1",
     "string": "^3.3.1",
     "tmp": "^0.0.28",
