--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pree2e": "npm run update-webdriver",
     "e2e": "protractor e2e-test/protractor.conf.js",
     "eslint": "eslint app/**/*.js test/**/*.js public/app/**/*.js",
-    "eslint-report": "eslint app/**/*.js test/**/*.js public/app/**/*.js -f node_modules/eslint-html-reporter/reporter.js -o qa/eslint-report.html"
+    "eslint-report": "eslint app/**/*.js test/**/*.js public/app/**/*.js -f node_modules/eslint-html-reporter/reporter.js -o qa/eslint-report.html",
+    "jsdoc": "node_modules/.bin/jsdoc app/ public-html/production -d docs"
   },
   "dependencies": {
     "async": "^1.5.2",
