--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "basic-auth": "^1.0.3",
     "baucis": "1.6.5",
     "baucis-swagger": "1.1.2",
-    "baucis-swagger2": "0.3.15",
+    "baucis-swagger2": "^0.3.18",
     "baucis-openapi3": "^0.1.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.2",
