--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "async": "^1.5.2",
     "basic-auth": "^1.0.3",
     "baucis": "1.6.7",
+    "baucis-openapi3": "^0.2.3",
     "baucis-swagger": "1.1.2",
     "baucis-swagger2": "^0.3.18",
-    "baucis-openapi3": "^0.2.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "bower": "^1.8.2",
@@ -51,6 +51,7 @@
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-mocha-test": "^0.12.7",
+    "helmet": "^3.8.2",
     "jimp": "^0.2.21",
     "jshint-teamcity": "^1.0.6",
     "mocha": "^3.5.3",
@@ -72,10 +73,10 @@
     "pkgcloud": "^1.3.0",
     "prom-client": "^3.4.1",
     "q": "^1.4.1",
+    "snyk": "^1.41.1",
     "string": "^3.3.1",
     "tmp": "^0.0.33",
-    "xlsx": "^0.8.0",
-    "snyk": "^1.41.1"
+    "xlsx": "^0.8.0"
   },
   "devDependencies": {
     "deco": "~0.12.3",
