Added new Dockerfile to use a multistage docker build with bitnami images

--- a/Dockerfile2
+++ b/Dockerfile2
@@ -8,23 +8,22 @@
 # 2. Use Docker linking with alias = DB to link to a MongoDB Docker Container
 #    Sample: docker run <image> --link <dbContainer>:DB
 
-FROM bitnami/node:8.6.0-r1 as builder
+FROM google/nodejs
+MAINTAINER pjmolina 
+
 ENV NODE_ENV=production
+
 WORKDIR /app
 RUN npm install -g grunt-cli 
 ADD package.json /app/
 RUN npm install
 ADD . /app
 RUN grunt release
-RUN rm -rf public e2e.test api-invocation-samples docs test uploads
 
-FROM bitnami/node:8.6.0-r1-prod
-LABEL AUTHOR pjmolina.metadev.pro
-ENV NODE_ENV=production
-RUN mkdir -p /app
-WORKDIR /app
-COPY --from=builder /app .
 ENV PORT=80
 #ENV DB_URI=mongodb://<host>:<port>/<dbName>
+
 EXPOSE 80
-CMD ["npm", "start"]
+
+CMD []
+ENTRYPOINT ["/nodejs/bin/node", "/app/app/server.js"]
