--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   "dependencies": {
     "async": "^1.5.2",
     "basic-auth": "^1.0.3",
-    "baucis": "1.6.7",
-    "baucis-openapi3": "^0.2.3",
+    "baucis": "1.6.8",
+    "baucis-openapi3": "^0.2.4",
     "baucis-swagger": "1.1.2",
     "baucis-swagger2": "^0.3.18",
     "bcrypt-nodejs": "0.0.3",
@@ -38,28 +38,28 @@
     "bower": "^1.8.2",
     "compression": "^1.7.1",
     "connect-mongo": "^1.1.0",
-    "consul": "^0.29.0",
+    "consul": "^0.30.0",
     "cookie-parser": "^1.4.1",
     "event-stream": "^3.3.2",
-    "express": "^4.16.0",
+    "express": "^4.16.2",
     "express-session": "^1.15.6",
     "gridfs-stream": "^1.1.1",
     "grunt": "^0.4.5",
     "grunt-cli": "^1.1.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-uglify": "^3.3.0",
     "grunt-mocha-test": "^0.12.7",
-    "helmet": "^3.8.2",
-    "jimp": "^0.2.21",
+    "helmet": "^3.9.0",
+    "jimp": "^0.2.28",
     "jshint-teamcity": "^1.0.6",
     "mocha": "^4.0.0",
     "mongoose": "~4.4.10",
     "mongoose-geojson": "0.0.4",
     "morgan": "^1.9.0",
     "multer": "^1.1.0",
-    "newrelic": "^1.26.2",
+    "newrelic": "^2.4.2",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.0",
     "passport-github2": "^0.1.11",
@@ -70,10 +70,9 @@
     "passport-localapikey-update": "^0.5.0",
     "passport-twitter": "^1.0.4",
     "passport-windowslive": "^1.0.2",
-    "pkgcloud": "^1.3.0",
+    "pkgcloud": "^1.5.0",
     "prom-client": "^3.4.1",
-    "q": "^1.4.1",
-    "snyk": "^1.41.1",
+    "q": "^1.5.1",
     "string": "^3.3.1",
     "tmp": "^0.0.33",
     "xlsx": "^0.8.0"
@@ -86,7 +85,8 @@
     "jasmine": "^2.8.0",
     "mocha-teamcity-reporter": "^1.0.0",
     "request": "~2.83.0",
-    "shelljs": "^0.7.8"
+    "shelljs": "^0.7.8",
+    "snyk": "^1.41.1"
   },
   "engines": {
     "node": "8.x",
