--- a/package.json
+++ b/package.json
@@ -34,31 +34,31 @@
     "baucis-swagger": "1.1.2",
     "baucis-swagger2": "^0.3.18",
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.18.2",
-    "bower": "^1.8.2",
-    "compression": "^1.7.1",
+    "body-parser": "^1.19.0",
+    "bower": "^1.8.8",
+    "compression": "^1.7.4",
     "connect-mongo": "^1.1.0",
-    "consul": "^0.30.0",
-    "cookie-parser": "^1.4.1",
+    "consul": "^0.34.1",
+    "cookie-parser": "^1.4.4",
     "event-stream": "^3.3.2",
-    "express": "^4.16.2",
-    "express-session": "^1.15.6",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "gridfs-stream": "^1.1.1",
-    "grunt": "^1.0.0",
-    "grunt-cli": "^1.1.0",
+    "grunt": "^1.0.4",
+    "grunt-cli": "^1.3.2",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-uglify": "^3.3.0",
     "grunt-mocha-test": "^0.12.7",
-    "helmet": "^3.9.0",
-    "jimp": "^0.2.28",
-    "jshint-teamcity": "^1.0.6",
-    "mocha": "^3.5.3",
+    "helmet": "^3.18.0",
+    "jimp": "^0.6.4",
+    "jshint-teamcity": "^1.1.1",
+    "mocha": "^6.1.4",
     "mongoose": "~4.4.10",
     "mongoose-geojson": "0.0.4",
-    "morgan": "^1.9.0",
+    "morgan": "^1.9.1",
     "multer": "^1.1.0",
-    "newrelic": "^2.4.2",
+    "newrelic": "^5.10.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.0",
     "passport-github2": "^0.1.11",
@@ -77,13 +77,14 @@
   },
   "devDependencies": {
     "deco": "~0.12.3",
-    "eslint-html-reporter": "^0.4.14",
+    "eslint": "^6.0.1",
+    "eslint-html-reporter": "^0.7.3",
     "expect.js": "~0.3.1",
-    "istanbul": "^0.4.2",
-    "jasmine": "^2.8.0",
-    "request": "~2.83.0",
-    "shelljs": "^0.7.8",
-    "snyk": "^1.41.1"
+    "istanbul": "^0.4.5",
+    "jasmine": "^3.4.0",
+    "request": "^2.88.0",
+    "shelljs": "^0.8.3",
+    "snyk": "^1.193.0"
   },
   "engines": {
     "node": "8.x",
